this is a new template

--- a/web-main.yml
+++ b/web-main.yml
@@ -2,8 +2,20 @@
 - name: deploying apache config changes across multiple webservers
   hosts: web
   become_true: yes
+  tasks:
+ 
 
-  - tasks:
-      name: install apache package
-      yum: httpd
-      state: latest
+  - name: installing apache 
+    yum: 
+      name: httpd
+      service: latest
+
+  - name: start, and enable http service
+    service:
+      name: httpd
+      state: started
+  
+  - name: creating a html directory to display content
+    file:
+      path: /var/www/html/team1/
+      state: directory
