--- a/webserver.yml
+++ b/webserver.yml
@@ -24,5 +24,5 @@
   - name: creating an index file within team1 html directory
     file:
       path: /var/www/html/team1/index.html
-      state: file
+      state: touch
       mode: '0777'
