--- a/webserver.yml
+++ b/webserver.yml
@@ -3,12 +3,10 @@
   remote_user: ansible
   gather_facts: yes
   hosts: prdx-webserver217.ziyotek1.local
+  vars:
+    github_folder: "home/ansible/Lab_Porject/webserver-playbooks/"
+
   tasks:
-    
-# - name: installing apache
-#    yum:
-#     name: httpd
-#     service: latest
   - name: installing apache
     yum:
       name: httpd
@@ -32,8 +30,29 @@
     firewalld:
       service: http
       permanent: yes
-      state: disabled
-  - name: Restarting Firewall Daemon
-    service:
+      state: enabled
+    notify: restart firewalld
+  handlers:
+  - name: restart firewalld
+    systemd:
       name: firewalld
       state: restarted
+# - name: Restarting Firewall Daemon
+#   service:
+#     name: firewalld
+#     state: restarted
+# - name: uploading content to our index file, and restart apache if a config has been made.
+#   copy:
+#     src: "{{ github_folder }}"/deploy_content.j2
+#     dest: /var/www/html/team1/index.html
+#   notify: restart apache
+#### I need to take a look to the variables
+# handlers:
+#   - name: restart apache (httpd)
+#     service:
+#       name: httpd
+#       state: restarted
+  - name: Deploying http.config template across our webservers
+    template:
+      src: "{{ github_folder }}"/ansible-templates/httpd_conf.j2
+      dest: /etc/httpd/conf/httpd.conf
