--- a/webserver.yml
+++ b/webserver.yml
@@ -43,7 +43,7 @@
 #     state: restarted
   - name: uploading content to our index file, and restart apache if a config has been made.
     copy:
-      src: "{{ github_folder }}"/deploy_content.j2
+      src: home/ansible/Lab_Porject/webserver-playbooks/deploy_content.j2
       dest: /var/www/html/team1/index.html
    notify: restart apache
 
@@ -54,5 +54,5 @@
         state: restarted
   - name: Deploying http.config template across our webservers
     template:
-      src: "{{ github_folder }}/ansible-templates/httpd_conf.j2"
+      src: /home/ansible/Lab_Porject/webserver-playbooks/ansible-templates/httpd_conf.j2
       dest: /etc/httpd/conf/httpd.conf
