--- a/webserver.yml
+++ b/webserver.yml
@@ -1,7 +1,8 @@
 ---
 - name: installing apache accross multiple servers
   remote_user: ansible
-  gather_facts: yes
+  gather_facts: no
+  become: yes
   hosts: prdx-webserver217.ziyotek1.local
   vars:
     github_folder: "home/ansible/Lab_Porject/webserver-playbooks/"
@@ -42,17 +43,20 @@
 #     name: firewalld
 #     state: restarted
   - name: uploading content to our index file, and restart apache if a config has been made.
-    copy:
-      src: "{{ github_folder }}"/deploy_content.j2
+    template:
+      src: "{{ github_folder }}/ansible-templates/deploy_content.j2"
       dest: /var/www/html/team1/index.html
-   notify: restart apache
+      mode: '0755'
+    become: yes
+#   notify: restart apache
+# handlers:
+# - name: restart apache 
+#   service:
+#     name: httpd
+#     state: restarted
 
-  handlers:
-    - name: restart apache (httpd)
-      service:
-        name: httpd
-        state: restarted
   - name: Deploying http.config template across our webservers
     template:
       src: "{{ github_folder }}/ansible-templates/httpd_conf.j2"
       dest: /etc/httpd/conf/httpd.conf
+    become: yes
