--- a/webserver.yml
+++ b/webserver.yml
@@ -42,16 +42,12 @@
 #     name: firewalld
 #     state: restarted
   - name: uploading content to our index file, and restart apache if a config has been made.
-    copy:
+    template:
       src: home/ansible/Lab_Porject/webserver-playbooks/deploy_content.j2
       dest: /var/www/html/team1/index.html
-   notify: restart apache
+      mode: "0755"
+      follow: yes
 
-  handlers:
-    - name: restart apache (httpd)
-      service:
-        name: httpd
-        state: restarted
   - name: Deploying http.config template across our webservers
     template:
       src: /home/ansible/Lab_Porject/webserver-playbooks/ansible-templates/httpd_conf.j2
